Disable user manager and scheduler. Add dependency on new user-manager app, so users get it automatically.

--- a/expath-pkg.xml.tmpl
+++ b/expath-pkg.xml.tmpl
@@ -3,4 +3,5 @@
     <title>Dashboard</title>
     <dependency processor="http://exist-db.org" semver-min="3.7.0-SNAPSHOT"/>
     <dependency package="http://exist-db.org/apps/shared" semver-min="@dependency.shared.version@"/>
+    <dependency package="http://exist-db.org/apps/usermanager"/>
 </package>
