--- a/expath-pkg.xml.tmpl
+++ b/expath-pkg.xml.tmpl
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <package xmlns="http://expath.org/ns/pkg" name="http://exist-db.org/apps/dashboard" abbrev="dashboard" version="@project.version@" spec="1.0">
     <title>Dashboard</title>
-    <dependency processor="http://exist-db.org" semver-min="3.0.4"/>
+    <dependency processor="http://exist-db.org" semver-max="3.6.1"/>
     <dependency package="http://exist-db.org/apps/shared" semver-min="@dependency.shared.version@"/>
 </package>
