new lauch-button component (replacement for launcher-app); launcher working with json data now; started a bit of docs

--- a/resources/amber-theme.css
+++ b/resources/amber-theme.css
@@ -14,6 +14,8 @@ body{
     --existdb-drawer-bg: var(--paper-amber-700);
     --existdb-drawer-color:white;
 
+    --existdb-highlight-color:var(--paper-grey-900);
+
     font-family: var(--existdb-font-family);
 
 }
