--- a/resources/styles.css
+++ b/resources/styles.css
@@ -102,6 +102,10 @@ existdb-app-title{
 }
 
 
+.foo{
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
 /*
 existdb-app-details{
     display: none;
