--- a/resources/blue-theme.css
+++ b/resources/blue-theme.css
@@ -14,4 +14,7 @@ body{
 
     font-family: var(--existdb-font-family);
 
+    --existdb-highlight-bg: var(--paper-pink-500);
+    --existdb-highlight-color: white;
+
 }
