--- a/resources/indigo-theme.css
+++ b/resources/indigo-theme.css
@@ -25,5 +25,7 @@ body{
     --existdb-control-bg:var(--paper-indigo-500);
     --existdb-control-color:white;
 
+    --existdb-highlight-bg: var(--paper-pink-500);
+    --existdb-highlight-color: white;
 
 }
