--- a/resources/dark-theme.css
+++ b/resources/dark-theme.css
@@ -25,4 +25,7 @@ body{
     --existdb-control-bg:var(--paper-grey-500);
     --existdb-control-color:white;
 
+    --existdb-highlight-bg: var(--paper-pink-500);
+    --existdb-highlight-color: white;
+
 }
