--- a/resources/default-theme.css
+++ b/resources/default-theme.css
@@ -25,5 +25,6 @@ body{
     --existdb-control-bg:var(--paper-blue-500);
     --existdb-control-color:white;
 
-
+    --existdb-highlight-bg: var(--paper-pink-500);
+    --existdb-highlight-color: white;
 }
